2006-06-24  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Regenerated.

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* stdint.h: Regenerated.

2006-06-23  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Regenerated.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in (HAVE_GETHOSTBYNAME): Add #undef to match
	../config.h.in this should be defined if gethostbyname() exists on
	windows.
	* config.h, config.h.in, stamp-chi, stdint.h: Regenerated.

2006-06-22  Jim Hyslop <jhyslop@dreampossible.ca>

	* strtoimax.c, strtoumax.c: new files to implement the strtoimax
	and strtoumax functions. Based on ggc's strto(u)l functions.

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.am: Update for stdint.h generation.
	* config.h.in.in: Manual hacks to attempt to add missing
	definitions for stdint.h generation.
	* Makefile.in, config.h, config.h.in, stamp-chi, stdint.h:
	Regenerated.
	
2006-06-14  Jim Hyslop <jhyslop@dreampossible.ca>

	* canonicalize.c: new file, with Windows-specific implementation
	of function canonicalize_filename_mode()

2006-06-12  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Undo trailing space addition from previous change
	by Jim Hyslop.
	* mkconfig.pl (make_config_h): Fix #define regex.

2006-06-11  Jim Hyslop <jhyslop@dreampossible.ca>

	* .cvsignore: Ignore the WinDebug and WinRel directories, which hold
	the *.obj files
	* mkconfig.pl, fix-msvc-mak.pl: change the #! to use an absolute path
	* config.h.in.in: add spaces after '#define X' macros (as opposed to
	'#define X Y' macros) to work around Cygwin/perl bug (or possible bug
	in mkconfig.pl) (affects CLIENT_SUPPORT, HAVE_CONNECT, LOCK_COMPATIBILITY,
	MY_NDBM, UTIME_EXPECTS_WRITABLE and restrict)
	* config.h.in.in: modified definitions of DEFAULT_SIGN_TEMPLATE,
	DEFAULT_SIGN_TEXTMODE, 	DEFAULT_VERIFY_TEMPLATE, HAVE_DECL_STRTOLL, 
	HAVE_DECL_STRTOULL to allow Visual Studio to compile
	* config.h.in, config.h, stamp-chi: regenerated